--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     </nav>
     <header class="hero">
-        <img class="hero-img" src="pic.png"/>
+        <img class="hero-img" src="header-image.svg"/>
         <h1 class="hero-heading">I am a developer</h1>
     </header>
     <section class="section ow">
