--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                         <li class="list-item-inline"><a class="link" href="https://github.com/rahul31agrawal">Github
                         </a>
                         </li>
-                        <li class="list-item-inline"><a class="link" href="www.linkedin.com/in/rahul-agrawal-680507161">LinkedIn
+                        <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/rahul-agrawal-680507161">LinkedIn
                         </a>
                         </li>
-                        <li class="list-item-inline"><a class="link" href="rahul31agrawal@gmail.com">Gmail
+                        <li class="list-item-inline"><a class="link" href="mailto:rahul31agrawal@gmail.com">Gmail
                         </a>
                         </li>
                         
