fixed linkedIn link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li class="list-item-inline"><a class="link" href="https://github.com/rahul31agrawal">Github
                         </a>
                         </li>
-                        <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/rahul-agrawal-680507161">LinkedIn
+                        <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/rahul-agrawal-680507161" target="_blank">LinkedIn
                         </a>
                         </li>
                         <li class="list-item-inline"><a class="link" href="mailto:rahul31agrawal@gmail.com">Gmail
