--- a/projects.html
+++ b/projects.html
@@ -39,10 +39,10 @@
             <div class="container-center"> 
                 <h1> How well do you know me?</h1>
             <small>25 August,2021</small>
-            <p>A CLI app built with <strong>nodeJS. </strong>  you can send this to your friends & find out who relly knows you</p>
+            <p>A CLI app built with <strong>nodeJS. </strong>  This is the quiz to test you that how well do you know me?</p>
             
             <a class="link link-primary" href="https://replit.com/@rahul31agrawal/Quiz-on-Rahul-Agrawal#index.js?embed=1&output=1">Live Project</a>
-            <a class="link link-secondary" href="/">View Source on Github</a>
+            <a class="link link-secondary" href="https://github.com/rahul31agrawal/Do-You-Know-Me">View Source on Github</a>
         
 
             </div>
