--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-brand">Hi, I am Rahul Agrawal</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/" class="active">home</a>
+                <a class="link link-active" href="/" class="active">Home</a>
                 
             </li>
             <li class="list-item-inline">
