--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
         <div class="nav-brand">I am  Developer</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link" href="/" class="active">home</a>
+                <a class="link" href="/" class="active">Home</a>
                 
             </li>
             <li class="list-item-inline">
