--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     <header class="hero">
         <img class="hero-img" src="header-image.png"/>
-        <h1 class="hero-heading">I am a Rock Star web developer</h1>
+        <h1 class="hero-heading">I am a Rock Star Frontend Engineer</h1>
         <h1 id="dream">Dare to dream!!</h1>
     </header>
     <section class="section ow">
