--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav class="navigation contaier">
         
         <div class="nav-brand">Hi, I am Rahul Agrawal</div>
+        <p>We may be seeing back to back failures but there is a strong possibility that we are not trying hard at the right place. It is important that we try and keep trying hard and find the right spot to reach where we want to reach.</p>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/" class="active">Home</a>
