--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     </nav>
     <header class="hero">
         <img class="hero-img" src="header-image.png"/>
-        <h1 class="hero-heading">I am a Rock Star Front-end Engineer who refuses to make boring website</h1>
+        <h1 class="hero-heading">I am a Rock Star Data Analyst who refuses to make boring dashboard</h1>
         <h1 id="dream">Dare to dream!!</h1>
     </header>
     <section class="section ow">
         <div class= "container container-center">
             <h1>Technologies</h1>
         
-                <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting, Power BI, Tableau.</p>
+                <p>I'm familiar with Python,SQL, Saprk, Power BI desktop, Tableau desktop.</p>
         </div>
         
         </section>
