--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <header class="hero">
         <img class="hero-img" src="header-image.png"/>
-        <h1 class="hero-heading">I am a Rock Star Data Engineer who refuses to make boring dashboard</h1>
+        <h1 class="hero-heading">I’m a Data Engineering Rockstar who turns messy data into gold with blazing-fast pipelines—no boring ETL, just pure data magic! ⚡</h1>
         <h1 id="dream">Dare to dream!!</h1>
     </header>
     <section class="section ow">
