--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navigation contaier">
         
-        <div class="nav-brand">I am a Data Analyst</div>
+        <div class="nav-brand">I am a Data Engineer</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/" class="active">Home</a>
